tests/should_pass/comments.kt
fun nest_comments() {
  var m: String = "test nesting"
  /* STUFF 
   *
   
   *
   * asdfasdfasdfasdf
  * /* asdfasdfasdf */
  * // 
   *
   *
   * */
   /* asdfasdfasdfasdfasdfasdfasdf */
}
