tests/should_fail/bad_strings.kt
fun bad_string() {
  var s: String = "Did not escape
}
